--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "seed": "cd server && npm run seed",
     "build": "cd client && npm run build",
     "render-build": "npm install && npm run build",
+    "mapall": "node ./server/lib/imgMapper/scripts/mapAll.js",
+    "clearmaps": "node ./server/lib/imgMapper/scripts/mapsClear.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
