--- a/server/package.json
+++ b/server/package.json
@@ -7,7 +7,7 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node server.js",
     "watch": "nodemon server.js",
-    "seed":"node ./seeders/seed.js"
+    "seed": "node ./seeders/seed.js"
   },
   "author": "",
   "license": "ISC",
@@ -21,6 +21,8 @@
     "mongoose": "^8.0.3"
   },
   "devDependencies": {
-    "nodemon": "^3.0.2"
+    "jsdom": "^23.1.0",
+    "nodemon": "^3.0.2",
+    "punycode": "^2.3.1"
   }
 }
